// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verifier API: corpus gold (v0.1) fixture: damage.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'English' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): A→E.",
        },
      ],
      "extractedVowelPath": [
        "A",
        "A",
        "E",
      ],
      "form": "damage",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "damage",
    "math7": {
      "events": [
        "COMPLETION",
      ],
      "jumps": [
        0,
        1,
      ],
      "rawSum": 4,
      "total1to7": 2,
      "values1to7": [
        1,
        1,
        2,
      ],
      "wrapCount": 0,
    },
    "principlesPath": [
      "TRUTH",
      "TRUTH",
      "EXPANSION",
    ],
    "vowels": [
      "A",
      "A",
      "E",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "damage",
}
`;

exports[`Verifier API: corpus gold (v0.1) fixture: dem_albanian.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'Albanian' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): Ë.",
        },
      ],
      "extractedVowelPath": [
        "Ë",
      ],
      "form": "dëm",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "dëm",
    "math7": {
      "events": [
        "COMPLETION",
      ],
      "jumps": [],
      "rawSum": 7,
      "total1to7": 7,
      "values1to7": [
        7,
      ],
      "wrapCount": 0,
    },
    "principlesPath": [
      "EVOLUTION",
    ],
    "vowels": [
      "Ë",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "dëm",
}
`;

exports[`Verifier API: corpus gold (v0.1) fixture: father.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'English' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): A→E.",
        },
      ],
      "extractedVowelPath": [
        "A",
        "E",
      ],
      "form": "father",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "father",
    "math7": {
      "events": [
        "COMPLETION",
      ],
      "jumps": [
        1,
      ],
      "rawSum": 3,
      "total1to7": 2,
      "values1to7": [
        1,
        2,
      ],
      "wrapCount": 0,
    },
    "principlesPath": [
      "TRUTH",
      "EXPANSION",
    ],
    "vowels": [
      "A",
      "E",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "father",
}
`;

exports[`Verifier API: corpus gold (v0.1) fixture: language.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'English' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): A→E.",
        },
      ],
      "extractedVowelPath": [
        "A",
        "U",
        "A",
        "E",
      ],
      "form": "language",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "language",
    "math7": {
      "events": [
        "WRAP_GATE",
        "COMPLETION",
        "NEW_CYCLE",
      ],
      "jumps": [
        4,
        3,
        1,
      ],
      "rawSum": 9,
      "total1to7": 6,
      "values1to7": [
        1,
        5,
        1,
        2,
      ],
      "wrapCount": 1,
    },
    "principlesPath": [
      "TRUTH",
      "UNITY",
      "TRUTH",
      "EXPANSION",
    ],
    "vowels": [
      "A",
      "U",
      "A",
      "E",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "language",
}
`;

exports[`Verifier API: corpus gold (v0.1) fixture: mother.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'English' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): O→E.",
        },
      ],
      "extractedVowelPath": [
        "O",
        "E",
      ],
      "form": "mother",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "mother",
    "math7": {
      "events": [
        "COMPLETION",
      ],
      "jumps": [
        5,
      ],
      "rawSum": 6,
      "total1to7": 5,
      "values1to7": [
        4,
        2,
      ],
      "wrapCount": 0,
    },
    "principlesPath": [
      "BALANCE",
      "EXPANSION",
    ],
    "vowels": [
      "O",
      "E",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "mother",
}
`;

exports[`Verifier API: corpus gold (v0.1) fixture: study.json 1`] = `
{
  "mode": "strict",
  "overallPass": true,
  "results": [
    {
      "checks": [
        {
          "id": "OPS_ALLOWED",
          "pass": true,
          "reason": "No opsUsed tokens provided.",
        },
        {
          "id": "DECOMP_PRESENT",
          "pass": true,
          "reason": "Decomposition present.",
        },
        {
          "id": "PATH_MATCH",
          "pass": true,
          "reason": "No vowelPath provided (not checked in v0.1).",
        },
        {
          "id": "LANG_KNOWN",
          "pass": true,
          "reason": "Language 'English' is in the v0.1 registry.",
        },
        {
          "id": "ROOT_HAS_VOWEL",
          "pass": true,
          "reason": "Decomposition/root material contains extracted vowel(s): U.",
        },
      ],
      "extractedVowelPath": [
        "U",
        "I",
      ],
      "form": "study",
      "normalizedOpsUsed": [],
      "pass": true,
    },
  ],
  "rulesVersion": "v0.1",
  "surface": {
    "basis": "study",
    "math7": {
      "events": [
        "WRAP_GATE",
        "COMPLETION",
        "INFINITE_PEACE",
      ],
      "jumps": [
        5,
      ],
      "rawSum": 8,
      "total1to7": 7,
      "values1to7": [
        5,
        3,
      ],
      "wrapCount": 1,
    },
    "principlesPath": [
      "UNITY",
      "INSIGHT",
    ],
    "vowels": [
      "U",
      "I",
    ],
  },
  "verifierVersion": "v0.1",
  "word": "study",
}
`;
